--- a/public/style/style.css
+++ b/public/style/style.css
@@ -764,22 +764,6 @@ body::-webkit-scrollbar {
   margin-top: 20rem;
 }
 
-.mt-8 {
-  margin-top: 2rem;
-}
-
-.mt-7 {
-  margin-top: 1.75rem;
-}
-
-.mt-48 {
-  margin-top: 12rem;
-}
-
-.mt-16 {
-  margin-top: 4rem;
-}
-
 .block {
   display: block;
 }
@@ -802,6 +786,10 @@ body::-webkit-scrollbar {
 
 .hidden {
   display: none;
+}
+
+.h-16 {
+  height: 4rem;
 }
 
 .h-4 {
@@ -833,20 +821,12 @@ body::-webkit-scrollbar {
   height: max-content;
 }
 
-.h-full {
-  height: 100%;
-}
-
-.h-32 {
-  height: 8rem;
-}
-
-.h-16 {
-  height: 4rem;
-}
-
 .max-h-0 {
   max-height: 0px;
+}
+
+.w-16 {
+  width: 4rem;
 }
 
 .w-4 {
@@ -882,18 +862,6 @@ body::-webkit-scrollbar {
   width: max-content;
 }
 
-.w-full {
-  width: 100%;
-}
-
-.w-32 {
-  width: 8rem;
-}
-
-.w-16 {
-  width: 4rem;
-}
-
 .max-w-0 {
   max-width: 0px;
 }
@@ -906,16 +874,8 @@ body::-webkit-scrollbar {
   max-width: 700px;
 }
 
-.grid-cols-6 {
-  grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-
 .grid-rows-2 {
   grid-template-rows: repeat(2, minmax(0, 1fr));
-}
-
-.grid-rows-12 {
-  grid-template-rows: repeat(12, minmax(0, 1fr));
 }
 
 .flex-col {
@@ -960,10 +920,6 @@ body::-webkit-scrollbar {
 
 .gap-4 {
   gap: 1rem;
-}
-
-.gap-14 {
-  gap: 3.5rem;
 }
 
 .gap-6 {
@@ -1040,24 +996,6 @@ body::-webkit-scrollbar {
 
 .gap-y-\[17px\] {
   row-gap: 17px;
-}
-
-.gap-y-4 {
-  row-gap: 1rem;
-}
-
-.gap-y-16 {
-  row-gap: 4rem;
-}
-
-.gap-x-28 {
-  -moz-column-gap: 7rem;
-       column-gap: 7rem;
-}
-
-.gap-x-14 {
-  -moz-column-gap: 3.5rem;
-       column-gap: 3.5rem;
 }
 
 .overflow-hidden {
@@ -1362,6 +1300,10 @@ body::-webkit-scrollbar {
     margin-top: 4rem;
   }
 
+  .sm\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
   .sm\:mt-9 {
     margin-top: 2.25rem;
   }
@@ -1378,28 +1320,20 @@ body::-webkit-scrollbar {
     display: none;
   }
 
-  .sm\:h-6 {
-    height: 1.5rem;
-  }
-
-  .sm\:h-32 {
-    height: 8rem;
-  }
-
   .sm\:h-24 {
     height: 6rem;
   }
 
-  .sm\:w-6 {
-    width: 1.5rem;
-  }
-
-  .sm\:w-32 {
-    width: 8rem;
+  .sm\:h-6 {
+    height: 1.5rem;
   }
 
   .sm\:w-24 {
     width: 6rem;
+  }
+
+  .sm\:w-6 {
+    width: 1.5rem;
   }
 
   .sm\:flex-row {
@@ -1484,8 +1418,8 @@ body::-webkit-scrollbar {
     margin-top: 5rem;
   }
 
-  .md\:mt-16 {
-    margin-top: 4rem;
+  .md\:h-32 {
+    height: 8rem;
   }
 
   .md\:h-7 {
@@ -1497,8 +1431,8 @@ body::-webkit-scrollbar {
     height: max-content;
   }
 
-  .md\:h-32 {
-    height: 8rem;
+  .md\:w-32 {
+    width: 8rem;
   }
 
   .md\:w-7 {
@@ -1508,10 +1442,6 @@ body::-webkit-scrollbar {
   .md\:w-max {
     width: -moz-max-content;
     width: max-content;
-  }
-
-  .md\:w-32 {
-    width: 8rem;
   }
 
   .md\:grid-cols-2 {
@@ -1553,12 +1483,12 @@ body::-webkit-scrollbar {
 }
 
 @media (min-width: 1024px) {
-  .lg\:mt-28 {
-    margin-top: 7rem;
-  }
-
   .lg\:mt-20 {
     margin-top: 5rem;
+  }
+
+  .lg\:mt-28 {
+    margin-top: 7rem;
   }
 
   .lg\:h-\[30px\] {
@@ -1608,8 +1538,8 @@ body::-webkit-scrollbar {
 }
 
 @media (min-width: 1280px) {
-  .xl\:mt-32 {
-    margin-top: 8rem;
+  .xl\:mt-24 {
+    margin-top: 6rem;
   }
 
   .xl\:mt-56 {
@@ -1627,11 +1557,6 @@ body::-webkit-scrollbar {
   .xl\:gap-x-16 {
     -moz-column-gap: 4rem;
          column-gap: 4rem;
-  }
-
-  .xl\:gap-x-28 {
-    -moz-column-gap: 7rem;
-         column-gap: 7rem;
   }
 
   .xl\:text-\[42px\] {
